--- a/client/src/style.css
+++ b/client/src/style.css
@@ -127,4 +127,47 @@ img {
 .hero * {
    z-index: 5;
 }
+/* Ikonok */
+
+.icons {
+   padding: 30px;
+}
+
+.icons h3 {
+   font-weight: bold;
+   margin-bottom: 15px;
+   color: #333;
+}
+.icons i {
+   background-color: white;
+   color: #74C0FC;
+   padding: 1rem;
+   border-radius: 50%;
+   margin-bottom: 15px;
+}
+
+/* Footer */
+
+.footer {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+   height: 200px;
+}
+
+.footer a {
+   color: #333;
+}
+.footer a:hover {
+   color: #74C0FC;
+}
+.footer p {
+   color: #333;
+}
+.footer .social > * {
+   margin-right: 30px;
+}
+
 
