--- a/client/src/style.css
+++ b/client/src/style.css
@@ -254,4 +254,115 @@ img {
 
 }
 
+/*Regisztráció oldal*/
 
+#registration {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   min-height: 100vh;
+}
+
+#registration .reg-wrapper {
+   width: 32rem;
+   border: 2px solid white;
+   padding: 1.875rem 2.5rem;
+   border-radius: 1rem;
+}
+
+#registration .reg-wrapper h1 {
+   font-size: 2rem;
+   text-align: center;
+   font-weight: 600;
+}
+
+#registration .reg-wrapper .input-box {
+   position: relative;
+   width: 100%;
+   height: 3.125rem;
+   margin: 1rem 0;
+}
+
+#registration .reg-wrapper .input-box input {
+   width: 100%;
+   height: 100%;
+   background: transparent;
+   border: none;
+   outline: none;
+   border: 2px solid rgba(255, 255, 255, 0.3);
+   border-radius: 2.5rem;
+   font-size: 1rem;
+   color: #fff;
+   padding: 1.25rem 2.8125rem 1.25rem 1.25rem;
+}
+
+#registration .reg-wrapper .input-box input::placeholder {
+   color: #fff;
+}
+
+#registration .reg-wrapper .input-box i {
+   position: absolute;
+   color: #fff;
+   right: 1.25rem;
+   top: 50%;
+   transform: translateY(-50%);
+   font-size: 1.25rem;
+}
+
+#registration .reg-wrapper .register-link {
+   font-size: 0.875rem;
+   text-align: center;
+   margin: 1.25rem 0 1rem;
+}
+
+#registration .reg-wrapper .register-link p a {
+   color: #fff;  
+   text-decoration: none;
+   font-weight: 600;
+}
+
+#registration .reg-wrapper .register-link p a:hover {
+   text-decoration: underline;
+
+}
+
+#registration .reg-wrapper .input-box-dropdown {
+   position: relative;
+   width: 100%;
+   height: 3.125rem;
+   margin: 1rem 0;
+}
+
+#registration .reg-wrapper .input-box-dropdown i {
+   position: absolute;
+   color: #fff;
+   right: 1.25rem;
+   top: 50%;
+   transform: translateY(-50%);
+   font-size: 1.25rem;
+}
+
+#registration .reg-wrapper .input-box-dropdown select {
+   position: relative;
+   appearance: none;
+   width: 100%;
+   height: 100%;
+   background: transparent;
+   border: none;
+   outline: none;
+   border: 2px solid rgba(255, 255, 255, 0.3);
+   border-radius: 2.5rem;
+   font-size: 1rem;
+   color: #0d0055;
+   padding: 1.25rem 2.8125rem 1.25rem 1.25rem;
+}
+
+#registration .reg-wrapper .select-placeholder {
+   position: absolute;
+   left: 1.25rem;
+   top: 50%;
+   transform: translateY(-50%);
+   color: rgba(255, 255, 255, 0.7);
+   pointer-events: none;
+   z-index: 1;
+}
