--- a/client/src/style.css
+++ b/client/src/style.css
@@ -403,3 +403,15 @@ img {
    pointer-events: none;
    z-index: 1;
 }
+#registration .reg-wrapper #description {
+   width: 100%;
+   height: 4.375rem;
+   font-size: 18px;
+   border-radius: 2.5rem;
+   padding-top: 24px;
+   padding-left: 1.25rem;
+   padding-right: 1.25rem;
+   background-color: #4189A1;
+   color: white;
+   border: 2px solid rgba(255, 255, 255, 0.3);
+}
