--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -39,19 +39,11 @@
    font-weight: 5500;
    line-height: 0.6;
    color: white;
-<<<<<<< Updated upstream:client/public/css/style.css
-<<<<<<< Updated upstream:client/public/css/style.css
-   margin-top: 15px;
-=======
    margin-top: 18px;
->>>>>>> Stashed changes:client/src/style.css
-=======
-   margin-top: 18px;
->>>>>>> Stashed changes:client/src/style.css
    text-align: center;
  }
 
-p{
+p {
    color: white;
    text-align: center;
 }
@@ -59,6 +51,16 @@ p{
 img {
    width: 100%;
 }
+
+textarea {
+   width: 90%;
+   height: 130px; /* A textarea maximális magassága 200 képpont */
+   resize: none; /* A textarea mérete nem módosítható */
+   overflow-y: auto; /* A scrollbar automatikusan megjelenik, ha a tartalom túllépi a maximális magasságot */
+   margin: 0 auto; /* A textarea középre igazítása */
+   display: block; /* A textarea blokk szintű elemként való megjelenítése */
+}
+
 /* Navbar */
 
 .navbar {
@@ -291,15 +293,7 @@ img {
    position: relative;
    width: 100%;
    height: 3.125rem;
-<<<<<<< Updated upstream:client/public/css/style.css
-<<<<<<< Updated upstream:client/public/css/style.css
-   margin: 0.5rem 0;
-=======
    margin: 0.6rem 0;
->>>>>>> Stashed changes:client/src/style.css
-=======
-   margin: 0.6rem 0;
->>>>>>> Stashed changes:client/src/style.css
 }
 
 #registration .reg-wrapper .input-box input {
@@ -380,7 +374,7 @@ img {
    padding: 0.85rem 2.8125rem 1.25rem 1.25rem;
 }
 
-#registration .reg-wrapper .input-box-date {
+#registration .reg-wrapper .input-box-date{
    position: relative;
    width: 100%;
    height: 3.125rem;
@@ -393,14 +387,9 @@ img {
    right: 1.25rem;
    top: 50%;
    transform: translateY(-50%);
-<<<<<<< Updated upstream:client/public/css/style.css
-<<<<<<< Updated upstream:client/public/css/style.css
    color: rgba(255, 255, 255, 0.7);
    pointer-events: none;
    z-index: 1;
-=======
-=======
->>>>>>> Stashed changes:client/src/style.css
    font-size: 1.25rem;
 }
 
@@ -414,9 +403,5 @@ img {
    border-radius: 2.5rem;
    font-size: 1rem;
    color: #fff;
-   padding: 1.25rem 16rem 1.25rem 1.25rem;
-<<<<<<< Updated upstream:client/public/css/style.css
->>>>>>> Stashed changes:client/src/style.css
-=======
->>>>>>> Stashed changes:client/src/style.css
+   padding: 1.25rem 12rem 1.25rem 1.25rem;
 }
