--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -117,6 +117,16 @@ textarea {
    padding: 0 20px;
 }
 
+.hero .content_menu {
+   display: flex;
+   flex-direction:row;
+   align-items:center;
+   justify-content:space-around;
+   text-align:center;
+   height: 100%;
+   padding: 0 20px;
+}
+
 .hero .content p {
    font-size: 23px;
    max-width: 800px;
