--- a/client/src/style.css
+++ b/client/src/style.css
@@ -107,7 +107,15 @@ img {
    height: 100%;
    padding: 0 20px;
 }
-
+.hero .content_menu {
+   display: flex;
+   flex-direction:row;
+   align-items:center;
+   justify-content:space-around;
+   text-align:center;
+   height: 100%;
+   padding: 0 20px;
+}
 .hero .content p {
    font-size: 23px;
    max-width: 800px;
