--- a/client/src/style.css
+++ b/client/src/style.css
@@ -423,3 +423,38 @@ img {
    color: white;
    border: 2px solid rgba(255, 255, 255, 0.3);
 }
+
+/*Users oldal*/
+
+#card_container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content:space-between;
+   text-align:center;
+}
+
+#card_container .card {
+   margin: 10px;
+   flex: 1 1 calc(20% - 10px);
+   border: 1px solid red;
+   background-color: #fff;
+
+}
+
+#card_container .card p{
+   display: block;
+   width: 10rem;
+   margin-top: 0.5rem;
+   margin-left: auto;
+   margin-right: auto;
+   color: #000;
+}
+
+#card_container .card a{
+   display: block;
+   width: 10rem;
+   margin-top: 0.5rem;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 30px;
+}
