--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -18,6 +18,7 @@
     background-color: #009ce4;
     border-radius: 5px;
     font-weight: 550;
+    margin: 1rem;
 }
 
 .btn:hover {
@@ -47,6 +48,7 @@
     border: 2px solid rgb(0, 217, 255);
     border-radius: 5px;
     font-weight: 550;
+    margin: 1rem;
 }
 
 .btn-login {
