--- a/client/src/style.css
+++ b/client/src/style.css
@@ -27,6 +27,13 @@
    margin-top: 0px;
  }
 
+ h3 {
+   font-weight: 400;
+   line-height: 1.2;
+   color: rgb(255, 255, 255);
+   margin-top: 0px;
+ }
+
  h4 {
    font-weight: 200;
    line-height: 1.2;
@@ -248,6 +255,11 @@ img {
    border-radius: 1rem;
 }
 
+#login .login-wrapper .buttons {
+   text-align: center;
+   align-items: center;
+}
+
 #login .login-wrapper h1 {
    font-size: 2rem;
    text-align: center;
@@ -278,7 +290,7 @@ img {
 
 #login .login-wrapper .input-box i {
    position: absolute;
-   color: #fff;
+   color: #ffffff;
    right: 1.25rem;
    top: 50%;
    transform: translateY(-50%);
@@ -338,6 +350,11 @@ img {
    font-weight: 600;
 }
 
+#registration .reg-wrapper .buttons {
+   text-align: center;
+   align-items: center;
+}
+
 #registration .reg-wrapper .input-box {
    position: relative;
    width: 100%;
@@ -369,6 +386,14 @@ img {
    top: 50%;
    transform: translateY(-50%);
    font-size: 1.25rem;
+}
+
+#registration .reg-wrapper .input-box textarea {
+   width: 85%;
+   padding-right: 30px;
+   margin-left: 5px;
+   box-sizing: border-box;
+   height: 100px;
 }
 
 #registration .reg-wrapper .register-link {
@@ -502,6 +527,33 @@ img {
    padding: 10px; /* Add some padding */
    position: relative;
  }
+
+ #card_container .cardevent {
+   margin-top: 20px;
+   margin-left: 8px;
+   margin-right: 8px;
+   width: 700px;
+   height: 600px;
+   border: none;
+   border-radius: 10px;
+   background-color: #003152;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between; /* Ensures space between content and buttons */
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   padding: 10px; /* Add some padding */
+   box-sizing: border-box;
+ }
+
+ #card_container .cardevent .content {
+   flex-grow: 1; /* Allows the content to grow and push the buttons down */
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start; /* Align items at the top */
+ }
+
  
  /* Ensure cards wrap after 4 items */
  /* Card Container */
